# FlowLens

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  PROJECT_REQUIREMENTS.md  README.md  USER_FEEDBACK_RAW.md  docker-compose.yml  package-lock.json  pyproject.toml  想法.txt
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.local.json
backend/: .gitignore  MCP_README.md  __init__.py  alembic.ini  mcp_server.py  poltaishow.db-shm  poltaishow.db-wal  requirements.txt  run_dev.py
backend/app/: __init__.py  analyzer.py  config.py  graph_adapter.py  llm.py  main.py  models.py  state.py
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_cfg_generator.py  test_chat_api.py  test_db_models.py  test_e2e_pipeline.py  test_graph_builder.py  test_import_api.py  test_llm.py  test_parser.py  test_parser_languages.py  test_project_api.py  test_rule_analyzer.py  test_source_report_api.py
contracts/: __init__.py
contracts/static_flow/: __init__.py  _serde.py  edge.py  graph.py  scan.py  signature.py  symbol.py
docs/: ENVIRONMENT.md  MANIFEST.md  PROJECT_STRUCTURE.md  TESTING.md  USAGE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/tests/: graphModel.test.ts  node-test.d.ts
modules/: __init__.py
modules/static_flow/: README.md  __init__.py  dot_exporter.py  project_analyzer.py  python_adapter.py  text_report.py  (+1 more)
resources/: __init__.py
tests/: test_static_flow_project_analyzer.py
(+115 files in other folders)
